--- a/javajam.css
+++ b/javajam.css
@@ -1,112 +1,155 @@
-{box-sizing: border-box;}
+* { box-sizing: border-box; }
 body {
-  background-color: #FCEBB6;
-background-image: url(fadedroad.jpg);
-background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: #D2B48C;
   color: #221811;
   font-family: Tahoma, Arial, sans-serif;
+margin: 0;
 }
-#wrapper { 
+#wrapper {
   background-color: #231814;
-margin-left: auto;
-margin-right: auto;
-width: 80%;
-  min-width: 900px;
-  max-width: 1280px;
-  box-shadow: 3px 3px
-    padding: 0;
+  padding: 0;
 }
 header {
   background-color: #D2B48C;
-  background-image: url(coffee.jpg);
+  background-image: url(cup.jpg);
   background-repeat: no-repeat;
-color: 8C3826;
-text-align: center;
+  color: #231814;
+  height: 128px;
+  padding-left: 105px;
   padding-top: 5px;
   padding-bottom: 5px;
 }
-header a { text-decoration: none ; }
+header a { text-decoration: none; }
 header a:link { color: #231814; }
 header a:visited { color: #231814; }
 header a:hover { color: #FEF6C2; }
-h1 { font-size: 3em; }
+h1 { font-size: 2em; }
 h2 { color: #8C3826; }
 h3, dt { color: #8C3826; }
 h4 {
   background-color: #D2B48C;
-font-size: 1.2em;
+  font-size: 1.2em;
   padding-left: .5em;
   padding-bottom: 0;
-  text-transforms: uppercase;
+  text-transform: uppercase;
   border-bottom: 1px solid #221811;
   clear: left;
 }
-nav { 
-  float: left;
-  font-weight: bold;
+nav {
   text-align: center;
   font-size: 1.5em;
-    padding-top: 5px;
-  padding-bottom: 5px;
-  width: 200px;
-  }
-  nav a { text-decoration: none;}
-nav a:link {color: #FEF6C2; }
-nav a:visited { color: #D2B48C; }
-nav a:hover { color: #CC933; }
+}
+nav a { text-decoration: none; }
+nav a:link { color:#D2B48C; }
+nav a:visisted { color: #D2B48C; }
+nav a hover: { color: #CC9933; }
 nav ul {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.25em;
   list-style-type: none;
-  padding-left: 0; }
+  margin: 0;
+  padding: 0;
+}
+nav li {
+  border-bottom: 1px solid #FEF6C2;
+  padding: .5em 1em;
+  width: 100%;
+}
 main {
   background-color: #FEF6C2;
   display: block;
-  margin-left: 200px;
-  overflow: auto;
   padding: 0 0 2em 0;
-  }
-h2, h3, h4, p, div, ul, dl {padding-left: 3em; padding-right: 2em; }
+}
+h2, h3, h4, p, div, ul, dl {padding-left: 1em; padding-right: 1em; }
+main ul { padding-left: 2em; }
 .details {
   padding-left: 20%;
-  padding-right: 20%;
+    padding-right: 20%;
   overflow: auto;
-  }
-.floatleft: left;
-float: left;
-padding-right: 2em;
-padding-bottom: 2em;
-}
-.onethird
-float: left;
-width: 33%;
 }
 img {
   padding-left: 10px;
-  padding-right: 10px;
-  #homehero {
-    height: 300px;
-    background-image: url(hero.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
+  padding-right: 10px; }
+#homehero {
+  height: 300px;
+  background-image: url(road.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%
+}
   #heromugs {
     height: 300px;
-    background-image: url(heromugs.jpg);
+    background-image: url(threemugs.jpg);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
-  heroguitar {
-    height: 300px;
-    background-image: url(heroguitar.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
-  footer {
-    background-color: #D2B48C;
-    font-size: .60em;
-    font-style: italic;
+    background-size: 100% 100%
+}
+#heroguitar {
+  height: 300px;
+  background-image: url(guitar.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%
+}
+#moblie { display: inline; }
+#desktop { display: none; }
+footer {
+  background-color: #D2B48C;
+  font-size: .60em;
+  font-style: italic;
+  text-align: center;
+  padding-bottom: 1em;
+  border-top: 2px solid #8C3826;
+}
+
+@media (min-width: 600px) {
+  header {
+    padding-left: 0;
     text-align: center;
-    padding-bottom: 1em;
-    border-top: 2px solid #8C3826;
   }
+  h1 { font-size: 3em; }
+  nav ul {
+    flex-flow: row nowrap;
+    justify-content: space-around;
+  }
+  nav li { border-bottom: none; }
+  #homehero {
+    background-image: url(hero.jpg);
+    height: 50vh;
+  }
+  #heromugs { background-image: url(heromugs.jpg); }
+  #herogutiar { background-image: url(heroguitar.jpg); }
+#flow {
+  display: flex;
+  flex-direction: row;
+  }
+  #moblie { display: none; }
+  #desktop { display: inline; }
+.detail {
+  display: flex;
+  flex-direction: row;
+  }
+  h4 {
+    margin-left: 10%
+      margin-right: 10%
+  }
+}
+/* CLOSED */
+/* OPENED */
+@media (min-width: 1024px)
+  {
+    @supports (display: grid) {
+      header { grid-area: header; }
+      nav { grid-area: nav; }
+      main { grid-area: main; }
+      footer { grid-area: footer; }
+      #wrapper {
+        display: grid;
+        grid-template:
+          "header header"
+          "nav main"
+          "footer footer"
+          / 200px ; }
+      nav ul { flex-direction: column; }
+      header { background-image: url(coffeelogo.jpg); }
+    }
+}
+/* CLOSED */
